--- a/CSS/_nav.scss
+++ b/CSS/_nav.scss
@@ -4,9 +4,11 @@
 .menu {
   display: flex;
   justify-content: space-between;
+  width: 100%;
   align-items: center;
-  height: 60px;
-  margin-right: 60px;
+  height: 150px;
+  width: 100%;
+  background-color: $whiteHighlight;
   ul {
     @include ul-style;
     li {
@@ -14,24 +16,26 @@
       text-decoration: none;
       text-align: center;
       padding: 8px;
-      color: map-get($colors, "blackText");
+      color: $blackText;
     }
   }
 
   .decor {
     text-decoration: none;
-    color: map-get($colors, "blackText");
+    color: $blackText;
     &:hover {
-      text-decoration: underline 3px solid map-get($colors, "underOrange");
+      text-decoration: underline 3px solid $underOrange;
     }
   }
 
   .logo {
     display: inline-block;
     align-content: center;
-    width: 100px;
-    margin-left: 60px;
-    padding-top: 10px;
+    width: 200px;
+    img {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   .buttonMenu {
@@ -41,19 +45,19 @@
   }
 
   .menuTalent {
-    border: 1.5px solid map-get($colors, "greenPrimary");
+    border: 2px solid $greenPrimary;
     &:hover {
       text-decoration: none;
-      color: map-get($colors, "whiteText");
-      background-color: map-get($colors, "greenPrimary");
+      color: $whiteText;
+      background-color: $greenPrimary;
     }
   }
 
   .menuCompanies {
-    border: 1.5px solid map-get($colors, "yellowPrimary");
+    border: 2px solid $yellowPrimary;
     &:hover {
       text-decoration: none;
-      background-color: map-get($colors, "yellowPrimary");
+      background-color: $yellowPrimary;
     }
   }
 }
