--- a/CSS/shared.css
+++ b/CSS/shared.css
@@ -3,6 +3,196 @@
   margin: 0 auto;
 }
 
+.wrapper {
+  width: 1280px;
+  margin: 0 auto;
+}
+
+.menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 150px;
+  width: 100%;
+  background-color: #f9fafb;
+}
+
+.menu ul {
+  margin: 0;
+  padding: 10px 0;
+  font-size: 1.5rem;
+  list-style-type: none;
+}
+
+.menu ul li {
+  display: inline-block;
+  text-decoration: none;
+  text-align: center;
+  padding: 8px;
+  color: #2d3a41;
+}
+
+.menu .decor {
+  text-decoration: none;
+  color: #2d3a41;
+}
+
+.menu .decor:hover {
+  -webkit-text-decoration: underline 3px solid #ec4a0a;
+          text-decoration: underline 3px solid #ec4a0a;
+}
+
+.menu .logo {
+  display: inline-block;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  width: 200px;
+}
+
+.menu .logo img {
+  width: 100%;
+  height: 100%;
+}
+
+.menu .buttonMenu {
+  border-radius: 5px;
+  padding: 5px !important;
+  margin: 5px;
+}
+
+.menu .menuTalent {
+  border: 2px solid #009688;
+}
+
+.menu .menuTalent:hover {
+  text-decoration: none;
+  color: #f2f4f7;
+  background-color: #009688;
+}
+
+.menu .menuCompanies {
+  border: 2px solid #ffc726;
+}
+
+.menu .menuCompanies:hover {
+  text-decoration: none;
+  background-color: #ffc726;
+}
+
+.wrapper {
+  width: 1280px;
+  margin: 0 auto;
+}
+
+.footerMenu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  height: 100px;
+}
+
+.logoFooter {
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 33%;
+}
+
+.logoFooter img {
+  width: 100px;
+  margin-bottom: 1rem;
+}
+
+.linkFooter {
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 33%;
+}
+
+.linkFooter li {
+  list-style-type: none;
+}
+
+.linkFooter a {
+  text-decoration: none;
+  font-size: 12px;
+  line-height: 18px;
+  color: #2d3a41;
+}
+
+h3 {
+  color: #ec4a0a;
+  font-size: 12px;
+  padding-bottom: 0.5rem;
+}
+
+h5 {
+  font-size: 12px;
+  color: #2d3a41;
+  font-weight: lighter;
+}
+
+.fa {
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+.fa-linkedin {
+  background: #55acee;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55acee;
+  color: white;
+}
+
+.fa-instagram {
+  background: #55acee;
+  color: white;
+}
+
 li {
   margin: 0;
   padding: 0;
