talentpage/jobpage created

--- a/CSS/_partial.scss
+++ b/CSS/_partial.scss
@@ -4,8 +4,8 @@ $greenSecondary: #158578;
 $yellowPrimary: #f4ba40;
 $yellowHover: #f79009;
 $whiteText: #f2f4f7;
-$whiteHighlight: #f9fafb;
-$blackText: #2d3a41;
+$whiteHighlight: #f4f2ed;
+$blackText: #37474f;
 $blackTextBackground: rgba(0, 0, 0, 0.5);
 $blueMedias: #007bb5;
 
