--- a/CSS/talentpage.css
+++ b/CSS/talentpage.css
@@ -11,7 +11,7 @@
           align-items: center;
   height: 150px;
   width: 100%;
-  background-color: #f9fafb;
+  background-color: #f4f2ed;
 }
 
 .menu ul {
@@ -26,12 +26,12 @@
   text-decoration: none;
   text-align: center;
   padding: 8px;
-  color: #2d3a41;
+  color: #37474f;
 }
 
 .menu .decor {
   text-decoration: none;
-  color: #2d3a41;
+  color: #37474f;
 }
 
 .menu .decor:hover {
@@ -74,6 +74,11 @@
 .menu .menuCompanies:hover {
   text-decoration: none;
   background-color: #ec4a0a;
+  color: #f2f4f7;
+}
+
+footer {
+  background-color: #f4f2ed;
 }
 
 .footerMenu {
@@ -148,7 +153,7 @@ h3 {
 
 h5 {
   font-size: 12px;
-  color: #2d3a41;
+  color: #37474f;
   font-weight: lighter;
 }
 
@@ -220,7 +225,7 @@ input[type="number"] {
 }
 
 body {
-  background-color: #f9fafb;
+  background-color: #f4f2ed;
 }
 
 .container {
@@ -253,7 +258,7 @@ body {
   font: "Nunito", sans-serif;
   font-weight: "bold";
   font-size: 48px;
-  color: #f9fafb;
+  color: #f4f2ed;
   background-color: #ec4a0a;
   text-align: center;
 }
@@ -268,14 +273,16 @@ body {
 }
 
 .container .searchBar {
-  width: 100%;
+  width: 70%;
   margin: 0 auto;
+  -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+          box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 .container .searchBar input {
-  height: 40px;
-  width: 40%;
-  border: 2px solid #f4ba40;
+  height: 43px;
+  width: 90%;
+  border: none;
 }
 
 .container .searchBar button {
@@ -301,10 +308,15 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  height: 70vh;
+  margin: 2% auto;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 .job-board {
-  height: 80vh;
+  height: 85vh;
 }
 
 .job-board h2 {
@@ -315,9 +327,27 @@ body {
   margin-bottom: 5%;
 }
 
-.job-board .board {
-  height: 70vh;
-  margin: 10% auto;
+.job-board .next-page {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin-right: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.job-board .next-page a {
+  font-weight: 300;
+}
+
+.job-board .next-page i {
+  color: #009688;
+  padding-left: 5px;
 }
 
 .job-board .jb-post {
@@ -347,19 +377,28 @@ body {
 
 .job-board .jb-post .job-information h3 {
   font-size: 20px;
+  margin-bottom: 0;
+  color: #37474f;
 }
 
 .job-board .jb-post .job-information p {
   font-size: 16px;
+  font-weight: 300;
+}
+
+.job-board .jb-post .job-information p:first-of-type {
+  font-style: italic;
+  font-weight: 300;
+  margin-top: 0;
 }
 
 .job-board .jb-post button {
   width: 100px;
   background-color: #f4ba40;
-  color: #2d3a41;
+  color: #37474f;
   font-family: "Nunito", sans-serif;
   font-weight: 700;
-  border: 1px solid #f9fafb;
+  border: 1px solid #f4f2ed;
   height: 40px;
   width: 200px;
   -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
