--- a/CSS/talentpage.scss
+++ b/CSS/talentpage.scss
@@ -29,12 +29,14 @@ body {
     justify-content: center;
   }
   .searchBar {
-    width: 100%;
+    width: 70%;
     margin: 0 auto;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+
     input {
-      height: 40px;
-      width: 40%;
-      border: 2px solid $yellowPrimary;
+      height: 43px;
+      width: 90%;
+      border: none;
     }
     button {
       height: 45px;
@@ -55,9 +57,12 @@ body {
 .board {
   display: flex;
   flex-direction: column;
+  height: 70vh;
+  margin: 2% auto;
+  justify-content: space-evenly;
 }
 .job-board {
-  height: 80vh;
+  height: 85vh;
   h2 {
     font-size: 40px;
     color: $greenPrimary;
@@ -65,9 +70,19 @@ body {
     margin-top: 10%;
     margin-bottom: 5%;
   }
-  .board {
-    height: 70vh;
-    margin: 10% auto;
+  .next-page {
+    display: inline-flex;
+    margin-right: 0;
+    align-items: center;
+    width: 100%;
+    justify-content: flex-end;
+    a {
+      font-weight: 300;
+    }
+    i {
+      color: $greenPrimary;
+      padding-left: 5px;
+    }
   }
 
   .jb-post {
@@ -86,9 +101,17 @@ body {
       padding: 20px;
       h3 {
         font-size: 20px;
+        margin-bottom: 0;
+        color: $blackText;
       }
       p {
         font-size: 16px;
+        font-weight: 300;
+        &:first-of-type {
+          font-style: italic;
+          font-weight: 300;
+          margin-top: 0;
+        }
       }
     }
     button {
