--- a/mainpage.css
+++ b/mainpage.css
@@ -31,7 +31,7 @@
   font: "Nunito", sans-serif;
   font-weight: "bold";
   font-size: 36px;
-  color: #f9fafb;
+  color: #f4f2ed;
   background-color: rgba(0, 0, 0, 0.5);
   margin-bottom: 0.5rem;
   text-align: center;
@@ -40,13 +40,13 @@
 
 .container .btnHire {
   background: #f4ba40;
-  color: #2d3a41;
+  color: #37474f;
   font: "bold";
   width: 250px;
   height: 40px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  border: 1px solid #f9fafb;
+  border: 1px solid #f4f2ed;
   border-radius: 5px;
   text-align: center;
   padding: 10px;
@@ -99,7 +99,7 @@
 }
 
 .blogSection p {
-  color: #2d3a41;
+  color: #37474f;
   font: 18px;
 }
 
@@ -163,7 +163,7 @@
   font-size: 30px;
   width: 100%;
   text-align: center;
-  color: #2d3a41;
+  color: #37474f;
 }
 
 .businessServices {
@@ -214,7 +214,7 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  color: #2d3a41;
+  color: #37474f;
 }
 
 .servCandidates p {
@@ -316,7 +316,7 @@
   -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
           box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
   background: #f4ba40;
-  color: #2d3a41;
+  color: #37474f;
 }
 
 .bookMeeting:hover {
