--- a/CSS/company.css
+++ b/CSS/company.css
@@ -225,39 +225,38 @@ input[type="number"] {
 }
 
 body {
-  background-color: #f4ba40;
+  background-color: #f4f2ed;
 }
 
 /* Header */
 .mainHeader {
   background-color: #f4ba40;
   width: 100%;
-  height: 100vh;
-  margin-top: 20px;
+  height: 80vh;
   padding-top: 25px;
   padding-bottom: 20px;
   background-position: center;
   background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .mainHeader h1 {
-  margin-top: 10%;
   text-decoration: none;
   text-align: left;
   font-family: "Nunito", sans-serif;
   max-width: 50%;
   font-size: 28px;
   line-height: 32px;
-  padding-left: 60px;
   color: #2d3a41;
   height: 40px;
 }
 
 /* Form */
-.bookMeeting {
-  margin-left: 60px;
-}
-
 .bookMeeting .userInfo {
   display: -webkit-box;
   display: -ms-flexbox;
