--- a/CSS/company.scss
+++ b/CSS/company.scss
@@ -1,28 +1,27 @@
 @import "./shared.scss";
 
 body {
-  background-color: $yellowPrimary;
+  background-color: $whiteHighlight;
 }
 
 /* Header */
 .mainHeader {
   background-color: $yellowPrimary;
   width: 100%;
-  height: 100vh;
-  margin-top: 20px;
+  height: 80vh;
   padding-top: 25px;
   padding-bottom: 20px;
   background-position: center;
   background-size: cover;
+  display: flex;
+  align-items: center;
   h1 {
-    margin-top: 10%;
     text-decoration: none;
     text-align: left;
     font-family: "Nunito", sans-serif;
     max-width: 50%;
     font-size: 28px;
     line-height: 32px;
-    padding-left: 60px;
     color: #2d3a41;
     height: 40px;
   }
@@ -31,7 +30,6 @@ body {
 /* Form */
 
 .bookMeeting {
-  margin-left: 60px;
   .userInfo {
     display: flex;
     figure {
