--- a/CSS/jobpage.css
+++ b/CSS/jobpage.css
@@ -227,7 +227,7 @@ input[type="number"] {
 .container {
   width: 100%;
   height: 400px;
-  background-image: url(../images/woman-working-from-home-laptop-with-empty-screen.jpg);
+  background-image: url(../Assets/woman-working-from-home-laptop-with-empty-screen.jpg);
   background-position: center;
   background-size: cover;
   display: -webkit-box;
@@ -238,7 +238,12 @@ input[type="number"] {
           align-items: center;
 }
 
-.container h1 {
+.container .talent-container {
+  width: 60%;
+  margin: 0 auto;
+}
+
+.container .talent-container h1 {
   font: "Nunito", sans-serif;
   font-weight: "bold";
   font-size: 36px;
@@ -246,45 +251,94 @@ input[type="number"] {
   background-color: #f4ba40;
   margin-bottom: 0.5rem;
   text-align: center;
-  width: 60%;
+  width: 100%;
 }
 
-.container .job-board {
+.job-board {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   height: 70vh;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.job-board .job-details {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.container .job-details {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.container .job-details .job-post {
+.job-board .job-details .job-post {
   width: 50%;
+  height: 600px;
   padding: 100px 20px;
   border: 2px solid #f4ba40;
   margin: 100px 0;
 }
 
-.container .application-form {
-  margin: 100px 0;
+.job-board .job-details .job-information h3 {
+  padding-left: 30px;
+  padding-right: 30px;
+  font-size: 24px;
+  text-align: left;
+  color: #009688;
 }
 
-.container .input {
+.job-board .job-details .job-information p {
+  padding-left: 30px;
+  padding-right: 30px;
+  font-size: 16px;
+  width: 100%;
+  padding: 0;
+}
+
+.job-board .job-details .job-information p:first-of-type {
+  font-weight: 300;
+  font-style: italic;
+}
+
+.application-form {
+  margin: 100px 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.application-form h2 {
+  font-size: 30px;
+  width: 100%;
+  text-align: center;
+  color: #009688;
+  margin-bottom: 0;
+}
+
+.application-form p {
+  padding-left: 30px;
+  padding-right: 30px;
+  font-size: 16px;
+  text-align: center;
+  font-weight: 300;
+}
+
+.input {
   position: relative;
 }
 
-.container .input__label {
+.input__label {
   position: absolute;
   left: 0;
   top: 0;
-  padding: calc(var(--size-bezel) * 0.75) calc(var(--size-bezel) * 0.5);
+  padding: 0 5px;
   margin: calc(var(--size-bezel) * 0.75 + 3px) calc(var(--size-bezel) * 0.5);
   background: #f2f4f7;
   white-space: nowrap;
@@ -292,45 +346,118 @@ input[type="number"] {
           transform: translate(0, 0);
   -webkit-transform-origin: 0 0;
           transform-origin: 0 0;
-  background: var(--color-background);
+  background: #f2f4f7;
   -webkit-transition: -webkit-transform 120ms ease-in;
   transition: -webkit-transform 120ms ease-in;
   transition: transform 120ms ease-in;
   transition: transform 120ms ease-in, -webkit-transform 120ms ease-in;
-  font-weight: bold;
+  font-weight: 300;
   line-height: 1.2;
 }
 
-.container .input__field {
+.input__field {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   display: block;
   height: 40px;
-  width: 100%;
+  width: 70%;
   border: 2px solid #009688;
-  padding: calc(var(--size-bezel) * 1.5) var(--size-bezel);
+  padding: 20 px 0;
   color: #37474f;
   background: transparent;
-  border-radius: var(--size-radius);
+  border-radius: 5px;
 }
 
-.container .input__field:focus + .input__label, .container .input__field:not(:placeholder-shown) + .input__label {
+input[type="text"] {
+  width: 100%;
+  height: 40px;
+  margin: 40px 0;
+}
+
+input[type="text"]:focus + .input__label, input[type="text"]:not(:placeholder-shown) + .input__label {
   -webkit-transform: translate(0.25rem, -65%) scale(0.8);
           transform: translate(0.25rem, -65%) scale(0.8);
   color: #158578;
 }
 
-.container input[type="text"] {
-  width: 200px;
-  height: 30px;
-  padding-right: 50px;
+.upload-resume {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
 }
 
-.container input[type="file"] {
+.upload-resume [type="text"] {
+  width: 50%;
+  margin: 0;
+}
+
+button {
   height: 40px;
-  width: 100px;
-  background: #009688;
-  color: white;
-  border: none;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border: 1px solid #f9fafb;
+  border-radius: 5px;
+  padding: 10px;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+          box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+  width: 100%;
+  background-color: #f4ba40;
+  font-weight: bold;
+  color: #37474f;
+}
+
+button:hover {
+  background-color: #f79009;
+}
+
+.back-page {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.back-page a {
+  font-weight: 300;
+}
+
+.back-page i {
+  color: #009688;
+  padding-right: 5px;
+}
+
+.next-page {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin-right: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.next-page a {
+  font-weight: 300;
+}
+
+.next-page i {
+  color: #009688;
+  padding-left: 5px;
 }
 /*# sourceMappingURL=jobpage.css.map */
