--- a/CSS/jobpage.scss
+++ b/CSS/jobpage.scss
@@ -3,94 +3,166 @@
 .container {
   width: 100%;
   height: 400px;
-  background-image: url(../images/woman-working-from-home-laptop-with-empty-screen.jpg);
+  background-image: url(../Assets/woman-working-from-home-laptop-with-empty-screen.jpg);
   background-position: center;
   background-size: cover;
   display: flex;
   align-items: center;
 
-  h1 {
-    font: $font-family;
-    font-weight: $font-weight;
-    font-size: 36px;
-    color: $whiteHighlight;
-    background-color: $yellowPrimary;
-    margin-bottom: 0.5rem;
-    text-align: center;
+  .talent-container {
     width: 60%;
+    margin: 0 auto;
+    h1 {
+      font: $font-family;
+      font-weight: $font-weight;
+      font-size: 36px;
+      color: $whiteHighlight;
+      background-color: $yellowPrimary;
+      margin-bottom: 0.5rem;
+      text-align: center;
+      width: 100%;
+    }
   }
-
-  //Job details
-  .job-board {
-    height: 70vh;
-    display: flex;
-  }
+}
+//Job details
+.job-board {
+  height: 100%;
+  display: flex;
+  height: 70vh;
+  align-items: center;
   .job-details {
     display: flex;
-    justify-content: space-between;
-
     .job-post {
       width: 50%;
+      height: 600px;
       padding: 100px 20px;
       border: 2px solid $yellowPrimary;
       margin: 100px 0;
     }
-  }
-
-  //Form Send Resume
-  .application-form {
-    margin: 100px 0;
-  }
-  //test
-  .input {
-    position: relative;
-
-    &__label {
-      position: absolute;
-      left: 0;
-      top: 0;
-      padding: calc(var(--size-bezel) * 0.75) calc(var(--size-bezel) * 0.5);
-      margin: calc(var(--size-bezel) * 0.75 + 3px) calc(var(--size-bezel) * 0.5);
-      background: $whiteText;
-      white-space: nowrap;
-      transform: translate(0, 0);
-      transform-origin: 0 0;
-      background: var(--color-background);
-      transition: transform 120ms ease-in;
-      font-weight: bold;
-      line-height: 1.2;
-    }
-    &__field {
-      box-sizing: border-box;
-      display: block;
-      height: 40px;
-      width: 100%;
-      border: 2px solid $greenPrimary;
-      padding: calc(var(--size-bezel) * 1.5) var(--size-bezel);
-      color: $blackText;
-      background: transparent;
-      border-radius: var(--size-radius);
-
-      &:focus,
-      &:not(:placeholder-shown) {
-        & + .input__label {
-          transform: translate(0.25rem, -65%) scale(0.8);
-          color: $greenSecondary;
+    .job-information {
+      h3 {
+        @include style-h3;
+        text-align: left;
+        color: $greenPrimary;
+      }
+      p {
+        @include subtitle;
+        width: 100%;
+        padding: 0;
+        &:first-of-type {
+          font-weight: 300;
+          font-style: italic;
         }
       }
     }
   }
-  input[type="text"] {
-    width: 200px;
-    height: 30px;
-    padding-right: 50px;
+}
+//Form Send Resume
+.application-form {
+  margin: 100px 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  h2 {
+    @include style-h2;
+    color: $greenPrimary;
+    margin-bottom: 0;
   }
+  p {
+    @include subtitle;
+    text-align: center;
+    font-weight: 300;
+  }
+}
+//test
+.input {
+  position: relative;
 
-  input[type="file"] {
+  &__label {
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding: 0 5px;
+    margin: calc(var(--size-bezel) * 0.75 + 3px) calc(var(--size-bezel) * 0.5);
+    background: $whiteText;
+    white-space: nowrap;
+    transform: translate(0, 0);
+    transform-origin: 0 0;
+    background: $whiteText;
+    transition: transform 120ms ease-in;
+    font-weight: 300;
+    line-height: 1.2;
+  }
+  &__field {
+    box-sizing: border-box;
+    display: block;
     height: 40px;
-    width: 100px;
-    background: $greenPrimary;
-    color: white;
-    border: none;
+    width: 70%;
+    border: 2px solid $greenPrimary;
+    padding: 20 px 0;
+    color: $blackText;
+    background: transparent;
+    border-radius: 5px;
+  }
+}
+input[type="text"] {
+  width: 100%;
+  height: 40px;
+  margin: 40px 0;
+  &:focus,
+  &:not(:placeholder-shown) {
+    & + .input__label {
+      transform: translate(0.25rem, -65%) scale(0.8);
+      color: $greenSecondary;
+    }
+  }
+}
+.upload-resume {
+  display: inline-flex;
+  align-items: center;
+  width: 100%;
+  [type="text"] {
+    width: 50%;
+    margin: 0;
+  }
+}
+
+button {
+  @include style-button;
+  width: 100%;
+  background-color: $yellowPrimary;
+  font-weight: bold;
+  color: $blackText;
+  &:hover {
+    background-color: $yellowHover;
+  }
+}
+
+.back-page {
+  display: inline-flex;
+  align-items: center;
+  width: 100%;
+  justify-content: flex-start;
+  a {
+    font-weight: 300;
+  }
+  i {
+    color: $greenPrimary;
+    padding-right: 5px;
+  }
+}
+
+.next-page {
+  display: inline-flex;
+  margin-right: 0;
+  align-items: center;
+  width: 100%;
+  justify-content: flex-end;
+  a {
+    font-weight: 300;
+  }
+  i {
+    color: $greenPrimary;
+    padding-left: 5px;
   }
 }
