--- a/CSS/talentpage.css
+++ b/CSS/talentpage.css
@@ -229,7 +229,7 @@ body {
 }
 
 .container {
-  background-image: url("/images/meeting.jpg");
+  background-image: url("/Assets/colleagues-giving-fist-bump (1).jpg");
   width: 100%;
   height: 500px;
   -o-object-fit: contain;
@@ -350,7 +350,7 @@ body {
   padding-left: 5px;
 }
 
-.job-board .jb-post {
+.job-board .job-post {
   width: 100%;
   height: 180px;
   display: -webkit-box;
@@ -365,34 +365,35 @@ body {
   margin-bottom: 10px;
 }
 
-.job-board .jb-post:hover {
+.job-board .job-post:hover {
   -webkit-transform: translateY(0) scale(1.1);
           transform: translateY(0) scale(1.1);
 }
 
-.job-board .jb-post .job-information {
+.job-board .job-post .job-information {
   width: 80%;
   padding: 20px;
 }
 
-.job-board .jb-post .job-information h3 {
+.job-board .job-post .job-information h3 {
   font-size: 20px;
   margin-bottom: 0;
   color: #37474f;
 }
 
-.job-board .jb-post .job-information p {
+.job-board .job-post .job-information p {
   font-size: 16px;
   font-weight: 300;
 }
 
-.job-board .jb-post .job-information p:first-of-type {
+.job-board .job-post .job-information p:first-of-type {
   font-style: italic;
   font-weight: 300;
   margin-top: 0;
 }
 
-.job-board .jb-post button {
+.job-board .job-post button,
+.job-board .job-post a {
   width: 100px;
   background-color: #f4ba40;
   color: #37474f;
@@ -403,9 +404,20 @@ body {
   width: 200px;
   -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
           box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
 }
 
-.job-board .jb-post button:hover {
+.job-board .job-post button:hover,
+.job-board .job-post a:hover {
   background-color: #f79009;
   cursor: pointer;
 }
