--- a/CSS/talentpage.scss
+++ b/CSS/talentpage.scss
@@ -4,7 +4,7 @@ body {
 }
 
 .container {
-  background-image: url("/images/meeting.jpg");
+  background-image: url("/Assets/colleagues-giving-fist-bump\ \(1\).jpg");
   width: 100%;
   height: 500px;
   object-fit: contain;
@@ -85,7 +85,7 @@ body {
     }
   }
 
-  .jb-post {
+  .job-post {
     width: 100%;
     height: 180px;
     display: flex;
@@ -114,9 +114,14 @@ body {
         }
       }
     }
-    button {
+    button,
+    a {
       @include apply-button;
       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-decoration: none;
     }
     @keyframes scale-up {
       0% {
