--- a/CSS/jobBoard.css
+++ b/CSS/jobBoard.css
@@ -11,7 +11,6 @@
           align-items: center;
   height: 150px;
   width: 100%;
-  background-color: #f4f2ed;
 }
 
 .menu ul {
@@ -90,7 +89,7 @@ footer {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-  height: 100px;
+  height: 150px;
 }
 
 .logoFooter {
@@ -308,7 +307,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 70vh;
+  min-height: 70vh;
   margin: 2% auto;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
@@ -453,4 +452,4 @@ body {
     opacity: 1;
   }
 }
-/*# sourceMappingURL=talentpage.css.map */
+/*# sourceMappingURL=jobBoard.css.map */
