--- a/CSS/jobBoard.scss
+++ b/CSS/jobBoard.scss
@@ -57,7 +57,7 @@ body {
 .board {
   display: flex;
   flex-direction: column;
-  height: 70vh;
+  min-height: 70vh;
   margin: 2% auto;
   justify-content: space-evenly;
 }
