--- a/CSS/applicationPage.scss
+++ b/CSS/applicationPage.scss
@@ -28,7 +28,7 @@
 .job-board {
   height: 100%;
   display: flex;
-  height: 70vh;
+  height: 60vh;
   align-items: center;
   .job-details {
     display: flex;
@@ -80,8 +80,8 @@
 
   &__label {
     position: absolute;
-    left: 0;
-    top: 0;
+    left: 5px;
+    top: -8px;
     padding: 0 5px;
     margin: calc(var(--size-bezel) * 0.75 + 3px) calc(var(--size-bezel) * 0.5);
     background: $whiteText;
