--- a/CSS/jobBoard.css
+++ b/CSS/jobBoard.css
@@ -76,11 +76,7 @@
   color: #f2f4f7;
 }
 
-footer {
-  background-color: #f4f2ed;
-}
-
-.footerMenu {
+footer .footerMenu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -92,7 +88,7 @@ footer {
   height: 150px;
 }
 
-.logoFooter {
+footer .logoFooter {
   -ms-flex-line-pack: center;
       align-content: center;
   -webkit-box-align: center;
@@ -110,12 +106,12 @@ footer {
   width: 33%;
 }
 
-.logoFooter img {
+footer .logoFooter img {
   width: 100px;
   margin-bottom: 1rem;
 }
 
-.linkFooter {
+footer .linkFooter {
   -ms-flex-line-pack: center;
       align-content: center;
   -webkit-box-align: center;
@@ -133,51 +129,51 @@ footer {
   width: 33%;
 }
 
-.linkFooter li {
+footer .linkFooter li {
   list-style-type: none;
 }
 
-.linkFooter a {
+footer .linkFooter a {
   text-decoration: none;
   font-size: 12px;
   line-height: 18px;
   color: #2d3a41;
 }
 
-h3 {
+footer h3 {
   color: #ec4a0a;
   font-size: 12px;
   padding-bottom: 0.5rem;
 }
 
-h5 {
+footer h5 {
   font-size: 12px;
   color: #37474f;
   font-weight: lighter;
 }
 
-.fa {
+footer .fa {
   padding: 20px;
   text-align: center;
   text-decoration: none;
   border-radius: 50%;
 }
 
-.fa:hover {
+footer .fa:hover {
   opacity: 0.7;
 }
 
-.fa-linkedin {
+footer .fa-linkedin {
   background: #55acee;
   color: white;
 }
 
-.fa-twitter {
+footer .fa-twitter {
   background: #55acee;
   color: white;
 }
 
-.fa-instagram {
+footer .fa-instagram {
   background: #55acee;
   color: white;
 }
