--- a/CSS/jobBoard.css
+++ b/CSS/jobBoard.css
@@ -224,7 +224,7 @@ body {
 }
 
 .container {
-  background-image: url("/Assets/colleagues-giving-fist-bump (1).jpg");
+  background-image: url("/Assets/colleagues-giving-fist-bump (1).jpg") bottom;
   width: 100%;
   height: 500px;
   -o-object-fit: contain;
@@ -318,11 +318,12 @@ body {
   font-size: 40px;
   color: #009688;
   font-weight: bold;
-  margin-top: 10%;
+  margin-top: 5%;
   margin-bottom: 5%;
 }
 
 .job-board .back-page {
+  margin-top: 5%;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -351,6 +352,7 @@ body {
   display: -ms-inline-flexbox;
   display: inline-flex;
   margin-right: 0;
+  margin-bottom: 5%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
