--- a/CSS/jobBoard.scss
+++ b/CSS/jobBoard.scss
@@ -4,7 +4,7 @@ body {
 }
 
 .container {
-  background-image: url("/Assets/colleagues-giving-fist-bump\ \(1\).jpg");
+  background-image: url("/Assets/colleagues-giving-fist-bump\ \(1\).jpg") bottom;
   width: 100%;
   height: 500px;
   object-fit: contain;
@@ -67,10 +67,11 @@ body {
     font-size: 40px;
     color: $greenPrimary;
     font-weight: bold;
-    margin-top: 10%;
+    margin-top: 5%;
     margin-bottom: 5%;
   }
   .back-page {
+    margin-top: 5%;
     display: inline-flex;
     align-items: center;
     width: 100%;
@@ -88,6 +89,7 @@ body {
   .next-page {
     display: inline-flex;
     margin-right: 0;
+    margin-bottom: 5%;
     align-items: center;
     width: 100%;
     justify-content: flex-end;
