--- a/CSS/talentPage.css
+++ b/CSS/talentPage.css
@@ -373,13 +373,16 @@ input[type="number"] {
   position: relative;
 }
 
+.input span {
+  background-color: #f4f2ed;
+}
+
 .input__label {
   position: absolute;
   left: 5px;
   top: -8px;
   padding: 0 5px;
   margin: calc(var(--size-bezel) * 0.75 + 3px) calc(var(--size-bezel) * 0.5);
-  background: #f2f4f7;
   white-space: nowrap;
   -webkit-transform: translate(0, 0);
           transform: translate(0, 0);
