--- a/CSS/talentPage.scss
+++ b/CSS/talentPage.scss
@@ -74,10 +74,18 @@
       align-items: center;
       background-color: white;
       padding-right: 30px;
+
+      a {
+        text-decoration: none;
+      }
       h3 {
         font-weight: 300;
         width: 90%;
         color: $yellowHover;
+        &:hover {
+          cursor: pointer;
+          color: $greenSecondary;
+        }
       }
       figure {
         width: 30%;
