--- a/CSS/_partial.scss
+++ b/CSS/_partial.scss
@@ -58,6 +58,7 @@ $font-weight: ("bold");
   padding: 10px;
   margin-top: 3rem;
   margin-bottom: 3rem;
+  font-weight: 600;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
 }
 
@@ -100,7 +101,7 @@ $font-weight: ("bold");
 @mixin styleBtn {
   background: $yellowPrimary;
   color: $blackText;
-  font: $font-weight;
+  font-weight: 600;
   width: 250px;
   height: 40px;
   box-sizing: border-box;
