--- a/CSS/applicationPage.css
+++ b/CSS/applicationPage.css
@@ -399,6 +399,7 @@ button {
   padding: 10px;
   margin-top: 3rem;
   margin-bottom: 3rem;
+  font-weight: 600;
   -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
           box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
   width: 100%;
