--- a/CSS/mainpage.scss
+++ b/CSS/mainpage.scss
@@ -1,4 +1,11 @@
-@import "./CSS/partial";
+@import "./partial";
+
+main {
+  background-color: $yellowPrimary;
+}
+header {
+  background-color: $whiteText;
+}
 
 /* Section CTA */
 .container {
@@ -33,6 +40,9 @@
 
 /* Blog Section */
 .blogSection {
+  height: 50vh;
+  background-color: $whiteText;
+  border-bottom-right-radius: 50%;
   .wrapper {
     @include sections-style;
   }
@@ -60,6 +70,7 @@
   }
   .blogText {
     width: 60%;
+    height: 200px;
   }
   figure {
     width: 350px;
@@ -77,22 +88,43 @@
 
 .resources {
   display: flex;
+  height: 50vh;
+  align-items: center;
+  background-color: $yellowPrimary;
+
   .wrapper {
     @include sections-style;
     flex-direction: column;
     height: 550px;
     justify-content: center;
   }
-  background-color: $yellowPrimary;
   h2 {
     @include style-h2;
     color: $blackText;
+    margin-bottom: 70px;
+  }
+  .servCandidates {
+    height: 100%;
+    justify-content: center;
+    @include services-description;
+    color: $blackText;
+    p {
+      @include subtitle;
+    }
+    h3 {
+      @include style-h3;
+      color: $underOrange;
+      font-weight: $font-weight;
+    }
   }
 }
 
 .businessServices {
   display: flex;
+  height: 50vh;
+  align-items: center;
   background-color: $greenPrimary;
+  border-top-left-radius: 50%;
   .wrapper {
     @include sections-style;
     flex-direction: column;
@@ -105,6 +137,7 @@
     h2 {
       @include style-h2;
       color: $whiteText;
+      margin-bottom: 70px;
     }
   }
 }
@@ -153,6 +186,7 @@
   &:hover {
     cursor: pointer;
     background: $greenSecondary;
+    font-weight: 600;
   }
 }
 
@@ -160,6 +194,7 @@
   @include style-button;
   background: $yellowPrimary;
   color: $blackText;
+  font-weight: 600;
   &:hover {
     cursor: pointer;
     background: $yellowHover;
@@ -170,9 +205,11 @@
   display: flex;
   align-items: center;
   i:before {
-    color: black;
+    color: $whiteText;
     padding: 15px;
     border-radius: 50%;
+    background-color: $blackText;
+    box-shadow: rgba(0, 0, 0, 0.5) 5px;
     height: 20px;
     width: 20px;
   }
